mTOM in progress

--- a/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
@@ -284,9 +284,9 @@ So a constructive approach is needed. ***
 
 \section{Minimal theory of mind}
 
-In this section we begin with someone, call her Lucky, capable  of representing nonintentional behaviour only and ask what more is needed for minimal theory of mind cognition.  We describe Lucky’s progress with a series of five principles. The principles are constructed in such a way that it would be coherent to suppose that Lucky has the abilities codified by the first \textit{n} principles only. They are not intended to represent a developmental or evolutionary progression.  The principles can also be extended to explain more sophisticated theory of mind abilities than those considered here.  We restrict ourselves to these five principles because they are sufficient to explain success on some false belief tasks.%
+In this section we begin with someone, call her Lucky, capable  of representing nonintentional behaviour only and ask what more is needed for minimal theory of mind cognition.  We describe Lucky’s progress with a series of principles. The principles are constructed in such a way that it would be coherent to suppose that Lucky has the abilities codified by the first \textit{n} principles only. They are not intended to represent a developmental or evolutionary progression.  The principles can also be extended to explain more sophisticated theory of mind abilities than those considered here.  We restrict ourselves to these five principles because they are sufficient to explain success on some false belief tasks.%
 \footnote{
-In standard false belief tasks, “[t]he subject is aware that he/she and another person [call him Maxi] witness a certain state of affairs x.  Then, in the absence of the other person the subject witnesses an unexpected change in the state of affairs from x to y” \citep[][p.\ 106]{en_89}.  The test concerns whether the subject realises that Maxi will falsely believe x to obtain.  In many cases the states of affairs, x and y, differ only with respect to the location of an object \citep[e.g.][]{en_1092, en_1208, en_1824}. 
+In standard false belief tasks, `[t]he subject is aware that he/she and another person [call him Maxi] witness a certain state of affairs x.  Then, in the absence of the other person the subject witnesses an unexpected change in the state of affairs from x to y' \citep[][p.\ 106]{en_89}.  The test concerns whether the subject realises that Maxi will falsely believe x to obtain.  In many cases the states of affairs, x and y, differ only with respect to the location of an object \citep[e.g.][]{en_1092, en_1208, en_1824}. 
 As we go on to discuss, our proposal for a minimal theory of mind could be extended to cover a range of other cases;
 but importantly there are also false belief tasks success on which cannot be explained by minimal theory of mind cognition (see section ***).
 }
@@ -337,48 +337,134 @@ The first principle, then, is that bodily movements form units which are directe
 Before describing the second principle we need to introduce two concepts.
 An agent’s \textit{field} at any given time is a set of objects.  Whether an object falls within the agent’s field is determined by spatial and physical constraints such as proximity and lighting.  The agent’s orientation and posture will also play a role in determining which objects fall into an agent’s field, as will eye direction in some species.  To fall within an agent’s field, there must be no opaque barriers between the agent and the object, unless the object was recently in motion and not behind a barrier.  These constraints ensure that objects which fall into an agent’s field are approximately those the agent can perceive.\footnote{ 	A variety of research in spatial and motor cognition suggests that adult humans (and perhaps others) not only compute other agents’ fields but also spontaneously locate objects within the spatial perspectives of other agents \citep[e.g.][]{en_1700, en_1701}.  }
 
-Let us say that an agent is \textit{encountering} an object if it is in her field.  The notion of encountering defines a relation between an agent and an object.  Within limits, this notion of encountering can do some of the work that the concept of perception does.  Encountering an object is like perceiving one to the extent that both notions involve a relation between agents and objects, both notions have approximately the same extension (someone perceives an object just if she encounters it), and both notions are bound up with action.  But to track who encounters what does not require understanding perception or related psychological concepts.  
+Let us say that an agent is \textit{encountering} an object if it is in her field.  The notion of encountering defines a relation between an agent and an object.  Within limits, this notion of encountering can do some of the work that the concept of perception does.  Encountering an object is like perceiving one to the extent that both notions involve a relation between agents and objects, both notions have approximately the same extension (someone perceives an object just if she encounters it), and both notions are bound up with action, as we shall explain.  
+%This is why representing encounterings and exploiting principles linking encountering to goal-directed action could enable Lucky to track perceptions.
 
-With these concepts in place, we can state the second principle: one can’t initiate goal-directed actions on an object unless one is encountering it.  So for an object-directed action to occur it is not sufficient merely that the object is present; the agent must also be encountering the object.  This principle is not true but it is a useful heuristic.
+With these concepts in place, we can state the second principle: 
+one cannot goal-directedly act on an object unless one has encountered it.  
+More carefully,
+if an outcome involves a particular object
+and the agent has not encountered that object,
+then that outcome cannot be a goal of her actions.
+As with the other principles, this is plainly not a fact.
+What matters is just that, in a limited but useful range of cases, the principles collectively enable lucky to track perceptions and goal-directed actions.
 
-What applications does the first principle have?  Sometimes it is possible to exercise control over an agent’s behaviour by manipulating whether she encounters an object.  A simple application of this would be keeping some food concealed from competitors close enough to grab it.  Concealing the food prevents the competitor from encountering it and therefore from grabbing it.
+The second principle has many applications.  Someone who is aware of this principle can be motivated to prevent others from encountering her food even when they are not in a position to steal it immediately.  Take scrub-jays.  When choosing where to cache food in the presence of a competitor they prefer far to near, darker to lighter, and occluded to in-view locations \citep[]{en_1451, en_1452}.  These scrub-jays may be trying to hinder future thefts, for these behaviours are not found when caching non-food items \citep[]{en_1419} or when caching in the presence of a partner \citep[][p.\ 514]{en_1418, en_1408}.  Clayton and Emery note that `[s]uch skills suggest visual perspective taking—computing what another can or cannot see' \citep[]{en_1451}. That is to say, they ascribed to scrub jays the concept of seeing.  Another possibility is that scrub-jays compute encountering rather than seeing.  Perhaps scrub-jays take having encountered food to be a condition for performing goal-directed actions targeting that food.  If so they may be trying to minimize the chance that others will encounter their food in order to prevent future theft.  
+Of course we  are not claiming that this is the actual explanation of these findings.  
+Our question is not about what scrub-jays actually represent but about what someone could represent that would enable her to track perceptions.
+Our claim is that the ability to track perceptions in the ways scrub-jays do could involve representing encounterings only.
 
-The hypothesis that an individual tracks what others encounter is also sufficient to explain success on some tests for level 1 perspective taking.  \citet[]{en_1550} asked children to hide objects from an experimenter.  The setup meant that the only hiding place left the objects in full view of the child herself.  Even the youngest children tested, two-and-a-half-year-olds, could do this reliably.  They were also able to say who could see an object in different conditions.  The researchers concluded that children can think about seeing:
-%
-\begin{quote}
-“children could conceptually distinguish what they saw from what another person might see, [and] could think about what the other person saw rather than what they saw when asked to do so.” \citep[][p.\ 1210]{en_1550}
-\end{quote}
-%
-An alternative hypothesis consistent with these results is that children relied on knowledge of encountering rather than of seeing.  On this hypothesis, children interpreted the experimenter as requesting them to place the object where she would not be encountering it.  And they interpreted questions about who can see what in terms of who is encountering what.
+%For another application of the second principle, consider two-year-old children's 
+% Level 1 perspective abilities. 
+%In an experiment designed by by Moll and Tomasello (\citeyear[]{en_1202}), an experimenter was positioned so that she could see only one of two objects (see Figure \vref{figure:level_1_perspective_taking}).  She then asked the child, ‘Where is the other toy? Where is it? I cannot find it!’ and then ‘Can you give it to me?’ (2006: 607).  Two-year-olds were significantly more likely to give the experimenter the toy she could not see.   
+%%
+%\begin{figure}
+%\begin{center}
+%\includegraphics{figure_level_1_perspective_taking.png}
+%\caption{
+%\label{figure:level_1_perspective_taking}
+%Experimental setup for Moll \& Tomasello’s 2006 experiment on level 1 perspective taking.  The experimenter was unable to see one of two objects clearly visible to the child.  When the experimenter asked `I cannot find it! … Can you give it to me?', two-year-olds reliably handed the hidden toy to the experimenter \citep[source: ][figure 1]{en_1202}.
+%}
+%\end{center}
+%\end{figure}
+%%
+%The authors suggest that children of this age `knew what another person could and could not see when that differed from what they saw'.\footnote{
+%	\citet[][p.\ 609]{en_1202}.  
+%	Compare \citet[][p.\ 1210]{en_1550} who take subjects' success on a level 1 perspective taking task to show that they
+%`could conceptually distinguish what they saw from what another person might see, [and] could think about what the other person saw rather than what they saw when asked to do so.'
+%}
+%An alternative possibility is that children were representing encountering rather than seeing.  Children may interpret the experimenter’s saying `Where is it? I cannot find it!'\ as expressing an inability to act.  If they also treat having encountered an object as a condition for acting on it, this would explain why they reliably handed the experimenter the object she was not encountering.\footnote{ 	Children in Moll and Tomasello’s experiment reliably work out that the experimenter is requesting something.  This suggests some understanding of pragmatics which could be taken as evidence of much richer theory of mind cognition.  The hypothesis about encountering is neutral on this issue.  Its purpose is only to show that success on these tasks may involve representing encounterings rather than seeings or perceptions.
+%}
 
-We are not claiming that the best explanation of these findings is the hypothesis that two-year-olds represent encountering rather than seeing; any such claim would require new experiments.  But this hypothesis is not known to be less likely than any of the competing hypotheses, and it can explain children’s performance without ascribing them sophisticated psychological concepts such as seeing.
 
-The principle about encountering being required for object-directed action could also explain success on another test for level 1 perspective taking by Moll and Tomasello (\citeyear[]{en_1202}).  An experimenter was positioned so that she could see only one of two objects (see Figure \vref{figure:level_1_perspective_taking}).  She then asked the child, ‘Where is the other toy? Where is it? I cannot find it!’ and then ‘Can you give it to me?’ (2006: 607).  Two-year-olds were significantly more likely to give the experimenter the toy she could not see.  
+
+For another application of the second principle, consider Hare, Call and Tomasello’s finding that chimpanzees reliably adopt strategies which are appropriate given what dominant competitors know about the locations of food \citep[]{en_1545}.  In their `uninformed' condition, a subordinate chimpanzee observed a food item being hidden while a dominant competitor’s view was blocked (see Figure \vref{figure:hare_food_perception}).  In this condition subordinates chose to approach the food significantly more often than in a control condition where the dominant competitor saw the food being hidden.  This indicates that the subordinate chimpanzees were at least indirectly sensitive to facts about what the dominants had perceived.  Several explanations of this finding have already been suggested \citep[]{Call:2008di, en_1551, Suddendorf:2003co}.  A further possibility is that subordinate chimpanzees are aware that the dominant chimpanzee has not encountered the food and take encountering the food to be a condition for the dominant to act with the goal of recovering it.  That would enable them to predict that the subordinate will not be able to retrieve this food in the misinformed condition. 
 
 
 
 \begin{figure}
 \begin{center}
-\includegraphics{figure_level_1_perspective_taking.png}
+\includegraphics{figure_hare_food_perception.png}
 \caption{
-\label{figure:level_1_perspective_taking}
-Experimental setup for Moll \& Tomasello’s 2006 experiment on level 1 perspective taking.  The experimenter was unable to see one of two objects clearly visible to the child.  When the experimenter asked “I cannot find it! … Can you give it to me?”, two-year-olds reliably handed the hidden toy to the experimenter \citep[source: ][figure 1]{en_1202}.
+	\label{figure:hare_food_perception}
+	A subordinate observes as food is placed.  The subordinate can also see the dominant.  There are three conditions: control—the dominant sees food being placed; `uninformed'—the dominant’s view is blocked while the food is placed; and `misinformed'—the dominant sees the food being placed then  has their view blocked while it is moved.
+	 \citep[Source:][pp.\ 142, fig. 1]{en_1545}
 }
 \end{center}
 \end{figure}
 
 
-The authors suggest that children of this age “knew what another person could and could not see when that differed from what they saw” \citep[][p.\ 609]{en_1202}.  An alternative possibility is that children were representing encountering rather than seeing.  Children may interpret the experimenter’s saying “Where is it? I cannot find it!” as expressing an inability to act.  Since encountering an object is a condition for acting on it, this would explain why they reliably handed the experimenter the object she was not encountering.\footnote{ 	Children in Moll and Tomasello’s experiment reliably work out which object the experimenter is requesting.  This suggests some understanding of pragmatics which could be taken as evidence of further theory of mind cognition.  The hypothesis about encountering is neutral on this issue.  Its purpose is only to show that success on these tasks may involve representing encountering rather than seeing.}
-
-Perhaps it is a mistake to think of our hypothesis about encountering as an alternative to claims about seeing and perceiving.  It is striking that philosophers have quite different views about what seeing involves—there are debates about whether it is possible to see things without seeing that something is the case \citep[e.g.][]{en_1671}, about whether and in what sense seeing is a representational notion \citep[]{en_1619, en_1705}, and about whether vision is intrinsically a source of knowledge \citep[]{en_1706}, for example.  By contrast, developmental researchers say little about what they take understanding seeing or perceiving to consist in.  Which notion of perception is the one children understand?  Without an answer to this question it is unclear what it means to claim that children understand seeing or perceiving and unclear what predictions follow from this claim.  The notion of encountering might be taken as a first step towards specifying what subjects understand when they understand perceiving.  It is only a first step because it may need elaborating in order to characterise what subjects understand about perception (see footnote 9 above); but it is a vital step because it involves minimising reliance on commonsense psychological concepts in favour of a constructive account.
-
-
+In short, 
+one way to explain abilities to track others' perceptions  is to represent perceptions as such.
+But another way to track perceptions is to represent encounterings and to suppose (as the second principle states) that goal-directed actions involving an object are only possible when the agent has encountered that object.
 
 
+So far we have been taking for granted that representing encounterings is different from representing perceptions as such.
+Why accept this claim? 
+It is striking that philosophers have quite different views about what seeing involves—there are debates about whether it is possible to see things without seeing that something is the case \citep[e.g.][]{en_1671}, about whether and in what sense seeing is a representational notion \citep[]{en_1619, en_1705}, and about whether vision is intrinsically a source of knowledge \citep[]{en_1706}, for example.  
+There is at least as much uncertainty concerning what might be involved in representing perceptions as such. 
+So it is not possible for us to say with certainty what it is to represent perceptions as such.  
+Even so, we can be sure that there are some differences between encountering and perception.
+If perceptions are representations, then representing perceptions as such plausibly involves representing representations.
+Since encounterings are relations not representations (by definition), representing encounterings will  differ from representing perceptions in that only the latter involves representing representations.
+But, as mentioned, not everyone agrees that perceptions are representations.
+We should therefore consider a bundle of features.
+Perception constitutively involves appearances, modalities or the possibility of illusion or is constitutively linked to reasons, knowledge or informational states.
+It is plausible that representing perceptions as such involves understanding something about some of these things.
+Since encountering does not constitutively involve any of these (by definition), 
+representing encounterings may differ from representing perceptions in that it does not require any kind of sensitivity to constitutive links with reasons, knowledge or informational states and nor does it require understanding  anything about appearances, modalities or the possibility of illusion.
+
+
+
+\subsection{Third principle}
+
+At this point we switch our attention from conditions on the \textit{occurrence} of goal-directed actions to conditions on their \textit{success}.  Such conditions are more stringent.  Where a goal specifies a particular object, it’s often not enough to have encountered it.  To succeed you must often also have encountered it \textit{in its current location} and to have done so \textit{on your most recent encounter}.  
+(There are exceptions, of course.)
+
+We can capture this condition and more by introducing a new notion, \textit{registration}.  Registration is a relation between an individual, an object and a location which will be implicitly defined by principles linking it to encountering and action.  (Where these principles conflict, principles mentioned later trump principles mentioned earlier.)  The first of these principles is that an individual registers an object at a location if she most recently encountered it at that location.  As is already clear from this principle, registration is like belief in that it has a correctness condition which may not obtain: a registration is correct when the object is in the location.   Since representing registration brings no benefit for Lucky independently of its connection to action, this principle cannot stand alone in our sequence; it is only the first half of the third principle.
+
+The second half of the third principle states that correct registration is a condition of successful action.  More precisely, in order to successfully perform a goal-directed action with a goal that specifies a particular object, the agent must correctly register that object.%
+\footnote{ 	
+Some commentators suggested that this principle requires an ability to remember particular encounterings and their temporal order.  There is some evidence that some nonhumans possess this ability \citep[e.g.][]{en_1714, en_1715}, but our proposal does not depend on this.  To track another agent’s most recent encounter, it is not necessary to remember all encounters and their temporal order; forgetting all but the most recent will do.
+}  
+This principle can be applied in two directions.  In one direction, it licenses Lucky to predict that a competitor who does not have a correct registration of an object will not be successful in performing actions whose goals specify that object.  In the other direction, it allows Lucky, on the basis of observing a successful goal-directed action, to infer that the agent has correctly registered the location of an object.%
+\footnote{ 	
+The ‘other direction’ is required (in conjunction with the fifth principle, below) for explaining infants’ success on false belief tasks where information about another’s beliefs is provided not by what she sees but by what she does \citep[as in][]{en_1824}.
+}
+So the principle not only extends Lucky’s ability to predict actions but also her ability to detect what someone registers.  
+
+The correctness of someone’s registrations can be manipulated in their absence by moving or destroying objects they have registered.  So with theory of mind cognition partially characterized by the third principle, Lucky can intentionally prevent others from stealing a food item they have already encountered simply by moving it in their absence.
+
+For an application of this principle, consider Hare, Call and Tomasello’s (\citeyear[]{en_1545}) experiment again.  In a further condition, the `misinformed' condition, a subordinate observer watched as a dominant competitor saw food being hidden.  The subordinate continued to watch as the competitor’s view was blocked and the food moved.  In this case the competitor has encountered the food but does not correctly register it.  The subordinate observers went for the food more often in this condition than in a control condition where the dominant saw the food being moved.  This cannot be explained in terms of the third principle.  That principle involved taking encountering an object to be a condition on acting on it.  This condition is met: the competitor \textit{has} encountered the food.  To explain why the observer goes for the food that has been moved, we need to appeal to the third principle—to correct registration as a condition on success.  It is possible that the subordinate observer realized that the dominant competitor last encountered the food in a location other than its current location.  Suppose the observer also understood that correct registration is a condition on successful goal-directed action.  Then the observer could predict that the competitor would not succeed in retrieving the food.  This could explain why the observer approached the food in the `misinformed' condition.  
+
+Another application of the third principle is to scrub-jays who strategically re-cache food depending on who saw what.  In one experiment, scrub-jays cached some food in the presence of Competitor A and then cached more food in the presence of Competitor B.  
+Later they had an opportunity to recover food in the presence of Competitor A.  
+The scrub-jays preferred to recover and re-cache food cached in the presence of Competitor A, leaving untouched food cached in the presence of the absent competitor \citep[][pp.\ 517-9]{en_1418}.  This strategy reduces the chances of Competitor A knowing where any of the scrub-jays’ food is.  What might explain this sensitivity to who saw what in choosing which food to recover?  Clayton and colleagues postulate a capacity to attribute knowledge or `informational states' \citep[]{en_1418}.  They are opposed by Penn and colleagues who postulate that scrub-jays are not ascribing knowledge but using rules such as `Try to re-cache food in a site different from the one where it was cached when the competitor was present' \citep[]{en_1417, Penn:2007ey}.  As an alternative to both proposals, the scrub-jays’ sensitivity could be explained in terms of registration.  Suppose scrub-jays understand that correct registration is a condition on successful goal-directed action.  Then they may be trying to prevent competitors from stealing their cached food by means of preventing them from correctly registering its location. As before, the motivation for our minimal theory of mind hypothesis is that it avoids the onerous information processing burden entailed by supposing that scrub-jays understand knowledge as such.    
+
+A third application of this principle is to infant pointing.  Liszkowski and colleagues showed that 12- and 18-month-olds point in order to provide relevant information to adults about the locations of objects \citep[]{en_1093}.  In this experiment, infants watch as an adult uses an object in some task.  Then the adult appears to accidentally misplace it.  Later, when the adult visibly needs that object to complete the task again, infants reliably point to it.  Apparently infants point not in order to get the object or to share interest in it, but to enable the adult to complete a task.  The authors suggest that this could be explained either by supposing that infants understand what the adult does not know, or that they understand what the adult is not attending to \citep[][p.\ 185]{en_1093}.  As knowledge and attention are both complex psychological notions, these suggestions raise the hard question of what children might understand of them.  Registration suggests a third possible explanation.  Maybe these infants understand that correct registration is necessary for successful goal-directed action and that pointing is a way of generating correct registration.  (None of these explanations bear on what is perhaps most interesting about these findings, that infants care to inform others and do so spontaneously.  Minimal theory of mind as described here is at most a small part of a larger story.)
 
 
 
 
+
+\section{***BIN***}
+
+
+With these concepts in place, we can state the second principle: one can’t complete a goal-directed action on an object unless one is encountering it.  So for a goal-directed action to succeed it is not sufficient merely that the object is present; the agent must also be encountering the object.  This principle is not true but it is a useful heuristic.
+
+The hypothesis that an individual tracks what others encounter is sufficient to explain success on some tests for level 1 perspective taking.  \citet[]{en_1550} asked children to hide objects from an experimenter.  The setup meant that the only hiding place left the objects in full view of the child herself.  Even the youngest children tested, two-and-a-half-year-olds, could do this reliably.  They were also able to say who could see an object in different conditions.  The researchers concluded that children can think about seeing:
+%
+\begin{quote}
+`children could conceptually distinguish what they saw from what another person might see, [and] could think about what the other person saw rather than what they saw when asked to do so.'\footnote{
+\citet[][p.\ 1210]{en_1550}.
+Compare \citet[][p.\ 609]{en_1202} who take subjects' success on a level 1 perspective taking task to show that they
+`knew what another person could and could not see when that differed from what they saw'.
+}
+\end{quote}
+%
+An alternative hypothesis consistent with these results is that children relied on knowledge of encountering rather than of seeing.  On this hypothesis, children interpreted the experimenter as requesting them to place the object where she would not be encountering it.  And they interpreted questions about who can see what in terms of who is encountering what.
+Of course we  are not claiming that this is the best explanation of these findings.  
+Our point is just that the ability to track perceptions measured by level 1 perspective taking tasks could involve representing encounterings only and need not involve representing perceptual states as such.
 
 
 
