mTOM in progress

--- a/intention motor representation with corrado sinigaglia/intention and motor action.ppr.r1.final.tex
+++ b/intention motor representation with corrado sinigaglia/intention and motor action.ppr.r1.final.tex
@@ -1,8 +1,8 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 
-\def \papersize {a4paper}
-%\def \papersize {letterpaper}
+%\def \papersize {a4paper}
+\def \papersize {letterpaper}
 
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
@@ -171,7 +171,7 @@ We have been arguing for the existence of demonstrative concepts which refer to 
 
 Or is it? So far we have not distinguished between two aspects of action outcomes.  Action outcomes often specify both a way of acting---whether to grasp or release, say---and also what to act on---on the mug or the pen, say.  Since we have been focusing on ways of acting rather than on what is to be acted on, it would be consistent with our arguments to accept that there are demonstrative concepts of ways of acting (such as grasping and reaching, perhaps) which defer by referring to motor representations while denying that any such demonstrative concepts are also about what is to be acted on. If this combination of views were correct, we would have only a partial solution to the interface problem. We would only have explained how the outcomes variously specified by intentions and motor representations non-accidentally match with respect to ways of acting, not with respect to what is to be acted on. However a range of behavioural and neurophysiological evidence shows that motor representations represent not only ways of acting but also objects on which actions might be performed and some of their features related to possible action outcomes involving them (for a review see \citealp{Gallese:2011uq}; for discussion see \citealp[pp.\ 410-3]{pacherie:2000_content}). For example visually encountering a mug sometimes involves representing features such as the orientation and shape of its handle in motor terms \citep{buccino:2009_broken,costantini:2010_where,cardellicchio:2011_space,Tucker:1998,tucker:2001_potentiation}. Reference by deference to motor representation could therefore explain how action outcomes match with respect not only to ways of acting but also with respect to what is to be acted on.%
 \footnote{
-\label{fn:campbell_location}
+\label{fn:campbell_location}%
 In fact, there may be another way of explaining non-accidental matching with respect to what is to be acted on due to \citet[pp.\ 36-8, 44-5, 48-57]{Campbell:2002ge}. In outline, Campbell's idea is to note that intentions can refer to objects by means of perceptual demonstrative elements, and that perceptual and motor representations of objects may be sufficiently commensurate for a perceptually represented object to be reliably selected as a target for motor processes.  It would be consistent to hold both that a view like Campbell's correctly explains non-accidental matching of action outcomes with respect to what is to be acted on, and also that non-accidental matching with respect to ways of acting is explained by demonstrative action concepts which defer to motor representations. We shall leave open the question of whether non-accidental matching involves elements additional to those involved in the view we have been developing.  Our claim is just that a solution to the interface problem need not involve anything other than components of intentions which refer to actions by deferring to motor representations of action outcomes.
 }
 
@@ -195,7 +195,10 @@ A further conjecture is that whenever there is a non-accidental match between th
 
 More speculatively still, we suggest that where an intention properly and reliably produces bodily movement, either acting on that intention involves a further intention or else the intention involves concepts which refer to actions by deferring to motor representations. If so, it is deferential action concepts that ultimately connect intentions to bodily movements. Only by recognising how intentions interlock with motor representations can we hope to understand how our intentions ever make a difference to the world around us.
 
-On this view experience of acting plays a novel role. Experiences made possible by motor representation, such as those associated with phenomenologically action-like imagination and those associated with actual action, are arguably necessary for there to be concepts which are constituents of intentions and refer to actions by deferring to motor representations. But if, as we conjecture, such deference is necessary for intentions to properly and reliably result in bodily movements, it may turn out that intending to act in the world depends on experiences which are made possible by motor representation. Much as on some views thought about objects depends on perceptual experience \citep[e.g.][]{Campbell:2002ge}, so also intending actions may depend on motor experience.  
+On this view experience of acting plays a novel role. Experiences made possible by motor representation, such as those associated with phenomenologically action-like imagination and those associated with actual action, are arguably necessary for there to be concepts which are constituents of intentions and refer to actions by deferring to motor representations. But if, as we conjecture, such deference is necessary for intentions to properly and reliably result in bodily movements, it may turn out that intending to act in the world depends on experiences which are made possible by motor representation. Much as on some views thought about objects depends on perceptual experience \citep[e.g.][]{Campbell:2002ge}, so also intending actions may depend on motor experience.%
+\footnote{
+Heartfelt thanks to Chiara Brozzo, Silvano Zipoli Caiani, Naomi Eilan, Vittorio Gallese, Francesco Guala, \'Elisabeth Pacherie and Natalie Sebanz.  Corado Sinigaglia was supported by EU grant TESIS, a Fellowship from the Institute of Philosophy (University of London) and a Fellowship from the Center for the Epistemology of Cognitive Sciences, Ecole Normale Superiéure de Lyon.
+}  
 
 
 
