--- a/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
@@ -33,7 +33,7 @@
 
 \begin{abstract}
 \noindent
-What could someone represent that would enable her to track, at least within limits, perceptions, beliefs including false beliefs, and other propositional attitudes? 
+What could someone represent that would enable her to track, at least within limits, perceptions, knowledge states and beliefs including false beliefs? 
 An obvious possibility is that she might represent these very propositional attitudes as such.
 It is sometimes tacitly or explicitly assumed that this is the only possible answer.
 However we argue that several recent discoveries in developmental, cognitive, and comparative psychology indicate the need for other, less obvious possibilities.
@@ -53,7 +53,7 @@ Theory of Mind, False Belief, belief, perception, development, comparative
 
 
 \section{Introduction}
-What could someone represent that would enable her to track, at least within limits, perceptions, beliefs including false beliefs, and other propositional attitudes? 
+What could someone represent that would enable her to track, at least within limits, perceptions, knowledge states and beliefs including false beliefs? 
 One answer is obvious: she might track these things by virtue of representing them as such, that is, by representing perceptions, beliefs, and other propositional attitudes as such.
 Our aim in what follows is to identify another, less obvious answer.
 There is a form of cognition---minimal theory of mind---which does not involve representing propositional attitudes as such but does involve representing simpler, relational mental states which could, within limits, enable one to track propositional attitudes such as beliefs.
@@ -128,7 +128,7 @@ The result---minimal theory of mind---is unlike its precursors in that it is ric
 \section{Motivation}
 Our question is theoretical: it concerns 
 not what anyone does represent
-but what someone could represent that would enable her, at least within limits, to track perceptions, beliefs and other propositional attitudes.
+but what someone could represent that would enable her, at least within limits, to track perceptions, knowledge states and beliefs.
 The motivation for facing up to this question is, of course, partly empirical.
 
 Consider ordinary adult humans.
@@ -221,8 +221,8 @@ that not all of their abilities to track perceptions and beliefs involve represe
 Further motivation for our question comes from evidence for theory of mind abilities in young children and infants.
 Children in their second year use pointing to provide information to others \citep[]{en_1093} in ways that reflect a partner’s ignorance or knowledge \citep[]{en_1699}, as well as providing more information to ignorant than knowledgeable partners when making requests \citep[]{en_1140}.  One-year-old children also predict actions of agents with false beliefs about the locations of objects \citep[]{en_1092, en_1208} and choose different ways of interacting with others depending on whether their beliefs are true or false \citep[]{en_1783,Knudsen:2011fk,southgate:2010fb}.  And in much the way that irrelevant facts about the contents of others’ beliefs modulate adult subjects’ response times, such facts also affect how long 7-month-old infants look at some stimuli \citep[]{kovacs_social_2010}.
 
-What do these infants and young children represent that enables them, within limits, to track others’ beliefs and other propositional attitudes?   
-The most straightforward answer would be to suppose that they represent perceptions, beliefs and other propositional attitudes as such \citep[e.g.][]{en_1138, en_1691}.  
+What do these infants and young children represent that enables them, within limits, to track others’ perceptions, knowledge states and beliefs?   
+The most straightforward answer would be to suppose that they represent perceptions, knowledge states and beliefs as such \citep[e.g.][]{en_1138, en_1691}.  
 But this answer faces several objections.  A body of evidence  suggests that representing beliefs requires conceptual sophistication, for it has a protracted developmental course stretching over several years \citep[]{en_87, en_89} and its acquisition is tied to the development of executive function \citep[]{en_410, en_1130} and language \citep[]{en_1209}.  Infants and young children are deficient in these.  
 Development of reasoning about beliefs in humans may also be facilitated by explicit training \citep[]{en_85} and environmental factors such as siblings \citep[]{en_507, en_1299}.  
 This is evidence that representations of belief in humans typically emerge from extensive participation in social interactions (as \citealp{en_1300} suggest).  
@@ -245,7 +245,7 @@ Key studies include
 } 
  
 Here, then, is a second source of motivation for our question about what someone could represent that would enable her, within limits, to track perceptions and beliefs.
-As we have seen, there are significant if not decisive objections to the two best developed conjectures about infant theory of mind abilities, the conjecture that these involve representing beliefs and other propositional attitudes as such and the conjecture that these involve representing nonintentional behaviour only.  
+As we have seen, there are significant if not decisive objections to the two best developed conjectures about infant theory of mind abilities, the conjecture that these involve representing perceptions, knowledge states and beliefs as such and the conjecture that these involve representing nonintentional behaviour only.  
 These objections, while not decisive, justify exploring alternatives.
 
 Theory of mind abilities are not only found in humans.
@@ -259,7 +259,7 @@ There is debate about the cognitive underpinnings of these abilities (e.g.\
 If it is not yet known precisely what explains these abilities 
 and if the available evidence does not already tightly constrain the space of admissible conjectures,
 then the construction of a minimal theory of mind may be relevant to these debates.
-For the conjecture that minimal theory of mind explains chimpanzees' or scrub-jays' abilities to track perceptions or beliefs can be empirically distinguished from conjectures about representations of nonintentional behaviour only and from conjectures about representations of perceptions, beliefs and other propositional attitudes as such (as we explain in section *** below).
+For the conjecture that minimal theory of mind explains chimpanzees' or scrub-jays' abilities to track perceptions or beliefs can be empirically distinguished from conjectures about representations of nonintentional behaviour only and from conjectures about representations of perceptions, knowledge states and beliefs (as we explain in section *** below).
 
 
 %The construction of minimal theory of mind shows that there is a form of theory of mind cognition which does not involve representing beliefs or other propositional attitudes as such but is capable of explaining, within limits, systematic success on a range of false belief tasks.
@@ -395,8 +395,8 @@ For another application of the second principle, consider Hare, Call and Tomasel
 
 
 In short, 
-one way to explain abilities to track others' perceptions  is to represent perceptions as such.
-But another way to track perceptions is to represent encounterings and to suppose (as the second principle states) that goal-directed actions involving an object are only possible when the agent has encountered that object.
+abilities to track others' perceptions  may depend on representing perceptions as such.
+But another way to track perceptions would be to represent encounterings and to suppose (as the second principle states) that goal-directed actions involving an object are only possible when the agent has encountered that object.
 
 
 So far we have been taking for granted that representing encounterings is different from representing perceptions as such.
@@ -421,7 +421,10 @@ representing encounterings may differ from representing perceptions in that it d
 At this point we switch our attention from conditions on the \textit{occurrence} of goal-directed actions to conditions on their \textit{success}.  Such conditions are more stringent.  Where a goal specifies a particular object, it’s often not enough to have encountered it.  To succeed you must often also have encountered it \textit{in its current location} and to have done so \textit{on your most recent encounter}.  
 (There are exceptions, of course.)
 
-We can capture this condition and more by introducing a new notion, \textit{registration}.  Registration is a relation between an individual, an object and a location which will be implicitly defined by principles linking it to encountering and action.  (Where these principles conflict, principles mentioned later trump principles mentioned earlier.)  The first of these principles is that an individual registers an object at a location if she most recently encountered it at that location.  As is already clear from this principle, registration is like belief in that it has a correctness condition which may not obtain: a registration is correct when the object is in the location.   Since representing registration brings no benefit for Lucky independently of its connection to action, this principle cannot stand alone in our sequence; it is only the first half of the third principle.
+We can capture this condition and more by introducing a new notion, \textit{registration}.  Registration is a relation between an individual, an object and a location which will be implicitly defined by principles linking it to encountering and action.  
+By design, applying all of these principles would sometimes lead to inconsistencies.  
+Where it would be impossible to apply all the principles consistently, consistency is to be achieved by having principles mentioned later trump principles mentioned earlier.
+The first  principle defining registration is that an individual registers an object at a location if and only if she most recently encountered it at that location.  As is already clear from this principle, registration is like belief in that it has a correctness condition which may not obtain: a registration is correct when the object is in the location.   Since representing registration brings no benefit for Lucky independently of its connection to action, this principle cannot stand alone in our sequence; it is only the first half of the third principle.
 
 The second half of the third principle states that correct registration is a condition of successful action.  More precisely, in order to successfully perform a goal-directed action with a goal that specifies a particular object, the agent must correctly register that object.%
 \footnote{ 	
@@ -429,19 +432,26 @@ Some commentators suggested that this principle requires an ability to remember 
 }  
 This principle can be applied in two directions.  In one direction, it licenses Lucky to predict that a competitor who does not have a correct registration of an object will not be successful in performing actions whose goals specify that object.  In the other direction, it allows Lucky, on the basis of observing a successful goal-directed action, to infer that the agent has correctly registered the location of an object.%
 \footnote{ 	
-The ‘other direction’ is required (in conjunction with the fifth principle, below) for explaining infants’ success on false belief tasks where information about another’s beliefs is provided not by what she sees but by what she does \citep[as in][]{en_1824}.
+The ‘other direction’ is required (in conjunction with the fourth principle, below) for explaining infants’ success on false belief tasks where information about another’s beliefs is provided not by what she sees but by what she does \citep[as in][]{en_1824}.
 }
 So the principle not only extends Lucky’s ability to predict actions but also her ability to detect what someone registers.  
 
 The correctness of someone’s registrations can be manipulated in their absence by moving or destroying objects they have registered.  So with theory of mind cognition partially characterized by the third principle, Lucky can intentionally prevent others from stealing a food item they have already encountered simply by moving it in their absence.
 
-For an application of this principle, consider Hare, Call and Tomasello’s (\citeyear[]{en_1545}) experiment again.  In a further condition, the `misinformed' condition, a subordinate observer watched as a dominant competitor saw food being hidden.  The subordinate continued to watch as the competitor’s view was blocked and the food moved.  In this case the competitor has encountered the food but does not correctly register it.  The subordinate observers went for the food more often in this condition than in a control condition where the dominant saw the food being moved.  This cannot be explained in terms of the third principle.  That principle involved taking encountering an object to be a condition on acting on it.  This condition is met: the competitor \textit{has} encountered the food.  To explain why the observer goes for the food that has been moved, we need to appeal to the third principle—to correct registration as a condition on success.  It is possible that the subordinate observer realized that the dominant competitor last encountered the food in a location other than its current location.  Suppose the observer also understood that correct registration is a condition on successful goal-directed action.  Then the observer could predict that the competitor would not succeed in retrieving the food.  This could explain why the observer approached the food in the `misinformed' condition.  
+For an application of this principle, consider Hare, Call and Tomasello’s (\citeyear[]{en_1545}) experiment again.  In a further condition, the `misinformed' condition, a subordinate observer watched as a dominant competitor saw food being hidden.  The subordinate continued to watch as the competitor’s view was blocked and the food moved.  In this case the competitor has encountered the food but does not correctly register it.  
+Subordinate observers went for the food more often in this condition than in a control condition where the dominant saw the food being moved.  
+This cannot be explained in terms of the second principle.  That principle involved taking encountering an object to be a condition on acting on it.  This condition is met: the competitor \textit{has} encountered the food.  To explain why the subordinate observer goes for the food that has been moved, we need to appeal to the third principle—to correct registration as a condition on success.  It is possible that the subordinate observer realized that the dominant competitor last encountered the food in a location other than its current location.  Suppose the observer also understood that correct registration is a condition on successful goal-directed action.  Then the observer could predict that the competitor would not succeed in retrieving the food.  This could explain why  subordinate observers  more often approach the food in the `misinformed' condition than in the control condition.  
 
-Another application of the third principle is to scrub-jays who strategically re-cache food depending on who saw what.  In one experiment, scrub-jays cached some food in the presence of Competitor A and then cached more food in the presence of Competitor B.  
+For another application of the third principle, consider scrub-jays who strategically re-cache food depending on who saw what.  In one experiment, scrub-jays cached some food in the presence of Competitor A and then cached more food in the presence of Competitor B.  
 Later they had an opportunity to recover food in the presence of Competitor A.  
-The scrub-jays preferred to recover and re-cache food cached in the presence of Competitor A, leaving untouched food cached in the presence of the absent competitor \citep[][pp.\ 517-9]{en_1418}.  This strategy reduces the chances of Competitor A knowing where any of the scrub-jays’ food is.  What might explain this sensitivity to who saw what in choosing which food to recover?  Clayton and colleagues postulate a capacity to attribute knowledge or `informational states' \citep[]{en_1418}.  They are opposed by Penn and colleagues who postulate that scrub-jays are not ascribing knowledge but using rules such as `Try to re-cache food in a site different from the one where it was cached when the competitor was present' \citep[]{en_1417, Penn:2007ey}.  As an alternative to both proposals, the scrub-jays’ sensitivity could be explained in terms of registration.  Suppose scrub-jays understand that correct registration is a condition on successful goal-directed action.  Then they may be trying to prevent competitors from stealing their cached food by means of preventing them from correctly registering its location. As before, the motivation for our minimal theory of mind hypothesis is that it avoids the onerous information processing burden entailed by supposing that scrub-jays understand knowledge as such.    
+The scrub-jays preferred to recover and re-cache food cached in the presence of Competitor A, leaving untouched food cached in the presence of the absent competitor \citep[][pp.\ 517-9]{en_1418}.  This strategy reduces the chances of Competitor A knowing where any of the scrub-jays’ food is.  What might explain this sensitivity to who saw what in choosing which food to recover?  Clayton and colleagues postulate a capacity to attribute knowledge or `informational states' \citep[]{en_1418}.  They are opposed by Penn and colleagues who postulate that scrub-jays are not ascribing knowledge but using rules such as `Try to re-cache food in a site different from the one where it was cached when the competitor was present' \citep[]{en_1417, Penn:2007ey}.  As an alternative to both proposals, the scrub-jays’ sensitivity could be explained in terms of registration.  Suppose scrub-jays understand that correct registration is a condition on successful goal-directed action.  Then they may be trying to prevent competitors from stealing their cached food by means of preventing them from correctly registering its location. 
 
-A third application of this principle is to infant pointing.  Liszkowski and colleagues showed that 12- and 18-month-olds point in order to provide relevant information to adults about the locations of objects \citep[]{en_1093}.  In this experiment, infants watch as an adult uses an object in some task.  Then the adult appears to accidentally misplace it.  Later, when the adult visibly needs that object to complete the task again, infants reliably point to it.  Apparently infants point not in order to get the object or to share interest in it, but to enable the adult to complete a task.  The authors suggest that this could be explained either by supposing that infants understand what the adult does not know, or that they understand what the adult is not attending to \citep[][p.\ 185]{en_1093}.  As knowledge and attention are both complex psychological notions, these suggestions raise the hard question of what children might understand of them.  Registration suggests a third possible explanation.  Maybe these infants understand that correct registration is necessary for successful goal-directed action and that pointing is a way of generating correct registration.  (None of these explanations bear on what is perhaps most interesting about these findings, that infants care to inform others and do so spontaneously.  Minimal theory of mind as described here is at most a small part of a larger story.)
+A third application of the third principle is to infant pointing.  \citet{en_1093} show that 12- and 18-month-olds point in order to provide relevant information to adults about the locations of objects.  In their experiment, infants watch as an adult uses an object in some task.  Then the adult appears to accidentally misplace it.  Later, when the adult visibly needs that object to complete the task again, infants reliably point to it.  Apparently infants point not in order to get the object or to share interest in it, but to enable the adult to complete a task.  The authors suggest that this could be explained either by supposing that infants understand what the adult does not know, or that they understand what the adult is not attending to \citep[][p.\ 185]{en_1093}.  As knowledge and attention are both complex psychological notions, these suggestions raise the hard question of what children might understand of them.  Another possible explanation involves registration.  Maybe the infants understand that correct registration is necessary for successful goal-directed action and that pointing is a way of generating correct registration.  (None of these explanations bear on what is perhaps most interesting about these findings, that infants care to inform others and do so spontaneously.  Minimal theory of mind as described here is at most a small part of a larger story.)
+
+Note that have not argued for the truth of any hypothesis about what chimpanzees, scrub-jays or infants represent.
+As explained above, what motivates our enquiry is not that there is already evidence for hypotheses about particular subjects' minimal theory of mind cognition: it is that, given the limited evidence for competing hypotheses and the objections they face, new hypotheses are worth formulating and testing.
+And in later sections we will explain how hypotheses about minimal theory of mind generate testable predictions, enabling them to be empirically distinguished from competing hypotheses.
+For now our focus is the question of what a subject could represent that would enable her to track track perceptions, knowledge states and beliefs in ways measured by various experimental paradigms.
 
 
 
